--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-core": "^6.3.15",
     "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "gulp": "gulpjs/gulp#4.0",
