--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
+    "minimatch": "^3.0.0",
     "requirejs": "^2.2.0",
     "stream-combiner": "^0.2.2",
     "through2": "^2.0.0"
   },
   "devDependencies": {
     "browser-sync": "^2.11.1"
+  },
+  "babel": {
+    "presets": ["es2015"]
   }
 }
