--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-uglify": "^1.5.1",
     "merge-stream": "^1.0.0",
     "minimatch": "^3.0.0",
+    "normalize.css": "^4.0.0",
     "requirejs": "^2.2.0",
     "stream-combiner": "^0.2.2",
     "through2": "^2.0.0"
@@ -28,6 +29,8 @@
     "browser-sync": "^2.11.1"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
