--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pweddit",
-  "version": "0.0.1",
+  "version": "0.0.13",
   "private": true,
   "dependencies": {
     "babel-core": "^6.3.15",
@@ -10,6 +10,8 @@
     "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.1",
+    "gulp-bump": "^2.0.1",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.0",
     "gulp-htmlmin": "^1.3.0",
@@ -32,26 +34,26 @@
   "babel": {
     "presets": [],
     "plugins": [
-        "check-es2015-constants",
-        "transform-es2015-arrow-functions",
-        "transform-es2015-block-scoped-functions",
-        "transform-es2015-block-scoping",
-        "transform-es2015-classes",
-        "transform-es2015-computed-properties",
-        "transform-es2015-destructuring",
-        "transform-es2015-duplicate-keys",
-        "transform-es2015-for-of",
-        "transform-es2015-function-name",
-        "transform-es2015-literals",
-        "transform-es2015-object-super",
-        "transform-es2015-parameters",
-        "transform-es2015-shorthand-properties",
-        "transform-es2015-spread",
-        "transform-es2015-sticky-regex",
-        "transform-es2015-template-literals",
-        "transform-es2015-typeof-symbol",
-        "transform-es2015-unicode-regex",
-        "transform-regenerator"
+      "check-es2015-constants",
+      "transform-es2015-arrow-functions",
+      "transform-es2015-block-scoped-functions",
+      "transform-es2015-block-scoping",
+      "transform-es2015-classes",
+      "transform-es2015-computed-properties",
+      "transform-es2015-destructuring",
+      "transform-es2015-duplicate-keys",
+      "transform-es2015-for-of",
+      "transform-es2015-function-name",
+      "transform-es2015-literals",
+      "transform-es2015-object-super",
+      "transform-es2015-parameters",
+      "transform-es2015-shorthand-properties",
+      "transform-es2015-spread",
+      "transform-es2015-sticky-regex",
+      "transform-es2015-template-literals",
+      "transform-es2015-typeof-symbol",
+      "transform-es2015-unicode-regex",
+      "transform-regenerator"
     ]
   }
 }
