Transition to SystemJS

--- a/config.json
+++ b/config.json
@@ -10,9 +10,10 @@
   "APP_CACHE": "pweddit",
   "APP_FILES": [
     "/",
-    "/main.js",
+    "/bootstrap.es5.js",
+    "/init.js",
     "/normalize.css",
-    "/require.js",
+    "/system.js",
     "/manifest.json",
 
     "/images/logo.png",
