--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pweddit",
-  "version": "0.0.2098",
+  "version": "0.0.2123",
   "private": true,
   "dependencies": {
     "babel-core": "^6.3.15",
-    "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "gulp": "gulpjs/gulp#4.0",
@@ -24,8 +24,8 @@
     "merge-stream": "^1.0.0",
     "minimatch": "^3.0.0",
     "normalize.css": "^4.0.0",
-    "requirejs": "^2.2.0",
     "stream-combiner": "^0.2.2",
+    "systemjs": "^0.19.29",
     "through2": "^2.0.0"
   },
   "devDependencies": {
