Fix compositing on slide-in

--- a/config.json
+++ b/config.json
@@ -34,6 +34,7 @@
     "/images/chevron-left.svg",
     "/images/chevron-right.svg",
     "/images/refresh.svg",
+    "/images/cloud-download.svg",
 
     "/modules/Config.js",
     "/modules/Gfycat.js",
