Implement deletion of suggestions

--- a/config.json
+++ b/config.json
@@ -37,6 +37,7 @@
     "/images/refresh.svg",
     "/images/cloud-download.svg",
     "/images/envelope.svg",
+    "/images/trash.svg",
 
     "/modules/Gfycat.js",
     "/modules/Gyazo.js",
