Fix tab order in headerbar drawer

--- a/config.json
+++ b/config.json
@@ -38,6 +38,7 @@
     "/images/cloud-download.svg",
     "/images/envelope.svg",
     "/images/trash.svg",
+    "/images/pencil.svg",
 
     "/modules/Gfycat.js",
     "/modules/Gyazo.js",
