--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pweddit",
-  "version": "0.0.2888",
+  "version": "0.0.2943",
   "private": true,
   "dependencies": {
     "babel-core": "^6.3.15",
@@ -30,7 +30,9 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.11.1"
+    "browser-sync": "^2.11.1",
+    "chai": "^3.5.0",
+    "mocha": "^2.5.3"
   },
   "commentAboutBabel": "This is the es2015 preset without the `transform-es2015-modules-commonjs`, because that breaks requirejs.",
   "babel": {
