--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.3.1",
     "file-loader": "^1.1.6",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.10.0"
   },
   "dependencies": {}
 }
