--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "copy-webpack-plugin": "^4.3.1",
     "file-loader": "^1.1.6",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.10.0"
+    "webpack-bundle-analyzer": "^2.10.0",
+    "worker-loader": "^1.1.0"
   },
   "dependencies": {}
 }
