--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.3.1",
     "file-loader": "^1.1.6",
+    "uglifyjs-webpack-plugin": "^1.1.8",
     "webpack": "^3.10.0",
-    "webpack-bundle-analyzer": "^2.10.0",
-    "worker-loader": "^1.1.0"
+    "webpack-bundle-analyzer": "^2.10.0"
   },
   "dependencies": {}
 }
